--- a/notebooks/rainfall_prediction.ipynb
+++ b/notebooks/rainfall_prediction.ipynb
@@ -1,9 +1,127 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "05c64e70-e4cf-4315-8ba7-f2e39ee1e564",
+   "metadata": {},
+   "source": [
+    "# Rainfall Prediction Project"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9df89c9a-6780-4146-9a18-3ff3651075f9",
+   "metadata": {},
+   "source": [
+    "## Data Loading, combining and EDA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f749cc8c-0a34-421a-bbb7-88b1d8356b17",
+   "metadata": {},
+   "source": [
+    "*Group 12*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff1c3eee-b960-4e9c-9626-20420c494c0d",
+   "metadata": {},
+   "source": [
+    "------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0711897d-a6b8-4ada-b6da-21ffda46576a",
+   "metadata": {},
+   "source": [
+    "# Combine data csv on different machines\n",
+    "   - ## Compare observations:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "545af876-270c-4812-92c8-487d3580475c",
+   "metadata": {},
+   "source": [
+    "| Team Member   | Operating System | RAM | Processor | Is SSD | Time taken |\n",
+    "|:-------------:|:----------------:|:---:|:---------:|:------:|:----------:|\n",
+    "| Vera Cui      |                  |     |           |        |            |\n",
+    "| Lynn Wu       |                  |     |           |        |            |\n",
+    "| Jasmine Ortega|                  |     |           |        |            |\n",
+    "| Yike Shi      |                  |     |           |        |            |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b5181a6-af76-49a5-92e8-f7888a3a5713",
+   "metadata": {},
+   "source": [
+    "--------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbd152ed-e586-4bf9-8a1a-969d0300c136",
+   "metadata": {},
+   "source": [
+    "#  Load csv and perform EDA on different machines"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bae8d1fb-bd9b-4828-8ad8-2716f8d055a1",
+   "metadata": {},
+   "source": [
+    "### Approaches to reduce memory usage while performing the EDA:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e59341c-abfc-4085-b5cf-d529e5d3828e",
+   "metadata": {},
+   "source": [
+    "    - \n",
+    "    - "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5ea4265-2eb3-4cdc-971f-8dde44959727",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "   - ## Compare observations:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e1fb514-1edb-45ac-8473-2078ba77c14d",
+   "metadata": {},
+   "source": [
+    "| Team Member   | Operating System | RAM | Processor | Is SSD | Time taken |\n",
+    "|:-------------:|:----------------:|:---:|:---------:|:------:|:----------:|\n",
+    "| Vera Cui      |                  |     |           |        |            |\n",
+    "| Lynn Wu       |                  |     |           |        |            |\n",
+    "| Jasmine Ortega|                  |     |           |        |            |\n",
+    "| Yike Shi      |                  |     |           |        |            |"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c2f5a1a-0965-454a-a3ae-8d6ab708f8e6",
+   "id": "0e5f9a78-6f3b-41d4-8ef4-fcc8a652419a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "333c6e47-7325-46b9-a9e7-62d2e1ca9434",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -25,7 +143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
