--- a/notebooks/rainfall_prediction.ipynb
+++ b/notebooks/rainfall_prediction.ipynb
@@ -48,7 +48,7 @@
    "source": [
     "| Team Member   | Operating System | RAM | Processor | Is SSD | Time taken |\n",
     "|:-------------:|:----------------:|:---:|:---------:|:------:|:----------:|\n",
-    "| Vera Cui      |                  |     |           |        |            |\n",
+    "| Vera Cui      | macOS            | 16GB| M1        | No     | 6min 39s   |\n",
     "| Lynn Wu       |                  |     |           |        |            |\n",
     "| Jasmine Ortega|                  |     |           |        |            |\n",
     "| Yike Shi      |                  |     |           |        |            |"
@@ -129,7 +129,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -143,7 +143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
