--- a/notebooks/rainfall_prediction.ipynb
+++ b/notebooks/rainfall_prediction.ipynb
@@ -37,8 +37,9 @@
    "id": "0711897d-a6b8-4ada-b6da-21ffda46576a",
    "metadata": {},
    "source": [
-    "# Combine data csv on different machines\n",
-    "   - ## Compare observations:"
+    "## Combine data csv on different machines\n",
+    "\n",
+    "- Compare observations:"
    ]
   },
   {
@@ -49,7 +50,7 @@
     "| Team Member   | Operating System | RAM | Processor | Is SSD | Time taken |\n",
     "|:-------------:|:----------------:|:---:|:---------:|:------:|:----------:|\n",
     "| Vera Cui      | macOS            | 16GB| M1        | No     | 6min 39s   |\n",
-    "| Lynn Wu       |                  |     |           |        |            |\n",
+    "| Lynn Wu       | macOS            | 8GB | M1        | Yes    |  6min 7s   |\n",
     "| Jasmine Ortega|                  |     |           |        |            |\n",
     "| Yike Shi      |                  |     |           |        |            |"
    ]
@@ -67,7 +68,7 @@
    "id": "bbd152ed-e586-4bf9-8a1a-969d0300c136",
    "metadata": {},
    "source": [
-    "#  Load csv and perform EDA on different machines"
+    "##  Load csv and perform EDA on different machines"
    ]
   },
   {
@@ -75,7 +76,7 @@
    "id": "bae8d1fb-bd9b-4828-8ad8-2716f8d055a1",
    "metadata": {},
    "source": [
-    "### Approaches to reduce memory usage while performing the EDA:"
+    "- Approaches to reduce memory usage while performing the EDA:"
    ]
   },
   {
@@ -94,7 +95,7 @@
     "tags": []
    },
    "source": [
-    "   - ## Compare observations:"
+    "- Compare observations:"
    ]
   },
   {
@@ -129,7 +130,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -143,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
