docs: update runtime

--- a/src/get_data.ipynb
+++ b/src/get_data.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b0c7f11a-b115-49c3-a244-c4598fae88aa",
+   "metadata": {},
+   "source": [
+    "# 525 Milestone 1: group 12"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "8bd27201-1166-43f0-9627-64cf8f2dc9a5",
@@ -15,6 +23,14 @@
     "from urllib.request import urlretrieve\n",
     "import json\n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "818bbb5d-5fa1-4dff-ab4b-dd5c4a663b4a",
+   "metadata": {},
+   "source": [
+    "### Download the data"
    ]
   },
   {
@@ -58,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "fcdbe2c0-a214-4231-87f6-adbdca5f40b5",
    "metadata": {},
    "outputs": [],
@@ -69,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "b18f68c1-dc0f-442d-8a9c-0b291534e14a",
    "metadata": {},
    "outputs": [
@@ -77,8 +93,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6min 19s, sys: 11.2 s, total: 6min 30s\n",
-      "Wall time: 6min 39s\n"
+      "CPU times: user 6min 43s, sys: 47.2 s, total: 7min 30s\n",
+      "Wall time: 8min 6s\n"
      ]
     }
    ],
@@ -91,12 +107,12 @@
     "                .assign(model=re.findall(r'[A-Z][^_]+', file)[0])\n",
     "                for file in files if file is not exclude)\n",
     ")\n",
-    "df.to_csv(\"./data/processed/combined_data.csv\")"
+    "df.to_csv(\"../data/processed/combined_data.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "4af4ae05-6c4d-4d54-b631-83136aaf86d5",
    "metadata": {},
    "outputs": [
@@ -201,19 +217,19 @@
        "4   4.270161e-13  MPI-ESM-1-2-HAM  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"./data/processed/combined_data.csv\")\n",
+    "df = pd.read_csv(\"../data/processed/combined_data.csv\")\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "805a17ad-a4f4-4fb6-8312-8412bdc27533",
    "metadata": {},
    "outputs": [
@@ -318,7 +334,7 @@
        "62513862      68.117489  SAM0-UNICON  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,13 +342,42 @@
    "source": [
     "df.tail()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbd06b51-9382-43ef-8cdf-667d7d52fcb1",
+   "metadata": {},
+   "source": [
+    "### Runtime "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2ecc4ad-68a8-4412-85df-799c6015b371",
+   "metadata": {},
+   "source": [
+    "| Team Member | Operating System | RAM | Processor | Is SSD | Time taken |\n",
+    "|:-----------:|:----------------:|:---:|:---------:|:------:|:----------:|\n",
+    "| Maeve Shi   | MacOS Big Sur    | 8GB | 2.3 GHz Dual-Core Intel Core i5 | Yes |  7min 30s   |\n",
+    "| Member 2    |                  |     |           |        |            |\n",
+    "| Member 3    |                  |     |           |        |            |\n",
+    "| Member 4    |                  |     |           |        |            |"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "608d5a55-beac-40d1-97a2-c19f9d799d2a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:525]",
+   "display_name": "Python [conda env:531]",
    "language": "python",
-   "name": "conda-env-525-py"
+   "name": "conda-env-531-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -344,7 +389,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
