docs: add runtime

--- a/notebooks/rainfall_prediction.ipynb
+++ b/notebooks/rainfall_prediction.ipynb
@@ -397,7 +397,7 @@
     "| Vera Cui      | macOS            | 16GB| M1        | No     | 6min 39s   |\n",
     "| Lynn Wu       | macOS            | 8GB | M1        | Yes    |  6min 7s   |\n",
     "| Jasmine Ortega|  macOS         |  8GB |   M1   |  Yes   | 9min 56s     |\n",
-    "| Maeve Shi   | MacOS Big Sur    | 8GB | 2.3 GHz Dual-Core Intel Core i5 | Yes |  7min 30s   |"
+    "| Yike Shi   | MacOS Big Sur    | 8GB | 2.3 GHz Dual-Core Intel Core i5 | Yes |  7min 30s   |"
    ]
   },
   {
@@ -485,7 +485,7 @@
     "| Vera Cui      | macOS            | 16GB| M1        | No     | 56.3 s     |\n",
     "| Lynn Wu       | macOS            | 8GB |   M1      |  yes   | 1min 8s    |\n",
     "| Jasmine Ortega|  MacOS           |8GB  |    M1     |  yes   |1 min 9s    |\n",
-    "| Yike Shi      |                  |     |           |        |            |"
+    "| Yike Shi      |    macOS              |  8GB   | 2.3 GHz Dual-Core Intel Core i5 | Yes |  1min 16s   |"
    ]
   },
   {
@@ -1118,7 +1118,7 @@
     "| Vera Cui      | macOS            | 16GB| M1        | No     | 51.4 s     |\n",
     "| Lynn Wu       |   macOS          | 8GB |  M1       |   yes  | 58.8s      |\n",
     "| Jasmine Ortega|  MacOS           |8GB  |    M1     |  yes   |54.9s       |\n",
-    "| Yike Shi      |                  |     |           |        |            |"
+    "| Yike Shi      |     macOS             |   8GB  | 2.3 GHz Dual-Core Intel Core i5 | Yes |  1min 2s  |"
    ]
   },
   {
@@ -1215,7 +1215,7 @@
     "| Vera Cui      | macOS            | 16GB| M1        | No     | 55.6 s     |\n",
     "| Lynn Wu       | macOS            |8GB  |    M1     | yes    |  59.5s     |\n",
     "| Jasmine Ortega|  MacOS           |8GB  |    M1     |  yes   |58.5 s      |\n",
-    "| Yike Shi      |                  |     |           |        |            |"
+    "| Yike Shi      |         macOS         |  8GB   |   2.3 GHz Dual-Core Intel Core i5 | Yes |  56.8s  |"
    ]
   },
   {
@@ -1404,7 +1404,7 @@
     "| Vera Cui      | macOS            | 16GB| M1        | No     | 6.01 s     |\n",
     "| Lynn Wu       | macOS            |8GB  | M1        |  yes   |   2.46s    |\n",
     "| Jasmine Ortega|  MacOS           |8GB  |    M1     |  yes   |2.49 s      |\n",
-    "| Yike Shi      |                  |     |           |        |            |"
+    "| Yike Shi      |      macOS            |  8GB   |    2.3 GHz Dual-Core Intel Core i5 | Yes |  4.25s |"
    ]
   },
   {
