rerun all cells

--- a/notebooks/Milestone3-Task4.ipynb
+++ b/notebooks/Milestone3-Task4.ipynb
@@ -49,7 +49,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>User</th><th>Current session?</th></tr><tr><td>6</td><td>application_1649815737766_0007</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://ip-172-31-15-134.us-west-2.compute.internal:20888/proxy/application_1649815737766_0007/\">Link</a></td><td><a target=\"_blank\" href=\"http://ip-172-31-15-134.us-west-2.compute.internal:8042/node/containerlogs/container_1649815737766_0007_01_000001/livy\">Link</a></td><td>None</td><td>✔</td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>User</th><th>Current session?</th></tr><tr><td>1</td><td>application_1649829334613_0002</td><td>pyspark</td><td>idle</td><td></td><td></td><td>None</td><td>✔</td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -133,8 +133,47 @@
     }
    ],
    "source": [
-    "pandas_df = pd.read_csv(\"s3://mds-s3-12/output/ml_data_SYD.csv\", index_col=0, storage_options=aws_credentials, parse_dates=True).dropna()\n",
+    "pandas_df = pd.read_csv(\"s3://mds-s3-12/output/ml_data_SYD.csv\", index_col=0, parse_dates=True).dropna()\n",
     "feature_cols = list(pandas_df.drop(columns=\"Observed\").columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            ACCESS-CM2  ACCESS-ESM1-5  ...   TaiESM1   Observed\n",
+      "time                                   ...                     \n",
+      "1889-01-01    0.040427       1.814552  ...  2.257933   0.006612\n",
+      "1889-01-02    0.073777       0.303965  ...  2.287381   0.090422\n",
+      "1889-01-03    0.232656       0.019976  ...  1.199909   1.401452\n",
+      "1889-01-04    0.911319      13.623777  ...  2.106737  14.869798\n",
+      "1889-01-05    0.698013       0.021048  ...  1.763335   0.467628\n",
+      "\n",
+      "[5 rows x 26 columns]"
+     ]
+    }
+   ],
+   "source": [
+    "pandas_df.head()"
    ]
   },
   {
@@ -146,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +270,7 @@
    ],
    "source": [
     "#create model\n",
-    "random_forest = sparkRFR(labelCol='Observed')\n",
+    "random_forest = sparkRFR(labelCol='Observed', featuresCol='Features')\n",
     "#create grid search parameters\n",
     "grid_param = ((ParamGridBuilder()\n",
     "               .addGrid(random_forest.numTrees, [10, 50, 100])\n",
@@ -241,7 +280,7 @@
     "             .build())\n",
     "\n",
     "#create evaluator\n",
-    "evaluator = RegressionEvaluator(labelCol='Observed')"
+    "evaluator = RegressionEvaluator(labelCol='Observed', predictionCol=\"prediction\")"
    ]
   },
   {
@@ -262,20 +301,28 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CrossValidatorModel_313f9f142874"
+     ]
     }
    ],
    "source": [
     "#Apply evaluator and grid parameters to cross validator\n",
     "cv = CrossValidator(estimator = random_forest,\n",
-    "                      estimatorParamMaps = gird_param,\n",
+    "                      estimatorParamMaps = grid_param,\n",
     "                      evaluator = evaluator,\n",
     "                      numFolds = 5)\n",
-    "final_model = cv.fit(training)"
+    "final_model = cv.fit(training)\n",
+    "final_model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -300,10 +347,10 @@
       "Best model\n",
       "==========\n",
       "\n",
-      "CV Score: 8.17\n",
+      "CV Score: 8.18\n",
       "numTrees: 100\n",
       "maxDepth: 5\n",
-      "bootstrap: False"
+      "bootstrap: True"
      ]
     }
    ],
@@ -316,25 +363,30 @@
     "print(f\"maxDepth: {final_model.bestModel.getMaxDepth()}\")\n",
     "print(f\"bootstrap: {final_model.bestModel.getBootstrap()}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:525_2022]",
+   "display_name": "PySpark",
    "language": "python",
-   "name": "conda-env-525_2022-py"
+   "name": "pysparkkernel"
   },
   "language_info": {
    "codemirror_mode": {
-    "name": "ipython",
+    "name": "python",
     "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "name": "pyspark",
+   "pygments_lexer": "python3"
   }
  },
  "nbformat": 4,
