--- a/notebooks/Milestone3.ipynb
+++ b/notebooks/Milestone3.ipynb
@@ -182,6 +182,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f1eedebc-cd80-4014-8851-6d528f4230ee",
+   "metadata": {},
+   "source": [
+    "Please check `Milestone3-Task3.ipynb`:[here](https://github.com/UBC-MDS/rainfall_prediction_g12/blob/main/notebooks/Milestone3-Task3.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b291b92d",
    "metadata": {},
    "source": [
