--- a/notebooks/Milestone3.ipynb
+++ b/notebooks/Milestone3.ipynb
@@ -12,8 +12,8 @@
     "## Milestone 3 checklist  :\n",
     "- [x] Setup your EMR cluster with Spark, Hadoop, JupyterEnterpriseGateway, JupyterHub 1.1.0, and Livy.  \n",
     "- [x] Make sure you set up foxy proxy for your web browser(Firefox). Probably you already set this up from the previous milestone.\n",
-    "- [ ] Develop a ML model using scikit-learn. (We will be using this model to deploy for our next milestone.)\n",
-    "- [ ] Obtain the best hyperparameter settings using spark's MLlib.\n",
+    "- [x] Develop a ML model using scikit-learn. (We will be using this model to deploy for our next milestone.)\n",
+    "- [x] Obtain the best hyperparameter settings using spark's MLlib.\n",
     "\n",
     "**Keep in mind:**\n",
     "\n",
@@ -185,7 +185,7 @@
    "id": "f1eedebc-cd80-4014-8851-6d528f4230ee",
    "metadata": {},
    "source": [
-    "Please check `Milestone3-Task3.ipynb`:[here](https://github.com/UBC-MDS/rainfall_prediction_g12/blob/main/notebooks/Milestone3-Task3.ipynb)."
+    ">Please check `Milestone3-Task3.ipynb`:[here](https://github.com/UBC-MDS/rainfall_prediction_g12/blob/main/notebooks/Milestone3-Task3.ipynb)."
    ]
   },
   {
